[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui_elements/setting_container.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="SettingContainer" type="HBoxContainer"]
margin_top = 485.0
margin_right = 600.0
margin_bottom = 565.0
rect_min_size = Vector2( 0, 80 )
script = ExtResource( 2 )

[node name="LeftButton" parent="." instance=ExtResource( 1 )]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color_hover = Color( 0.964706, 0.862745, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 1 )
text = "<"
flat = true

[node name="SelectedLabel" type="Label" parent="."]
margin_left = 84.0
margin_right = 516.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Big Map"
align = 1
valign = 1

[node name="RightButton" parent="." instance=ExtResource( 1 )]
margin_left = 520.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color_hover = Color( 0.964706, 0.862745, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 1 )
text = ">"
flat = true
